# fcitx5-hallelujah

./: .gitignore  CMakeLists.txt  README.md  org.fcitx.Fcitx5.Addon.Hallelujah.metainfo.xml.in
.github/workflows/: ci.yml
data/: CMakeLists.txt
po/: CMakeLists.txt  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  factory.cpp  factory.h  hallelujah-addon.conf.in.in  hallelujah.conf.in  hallelujah.cpp  hallelujah.h
test/: CMakeLists.txt  testdir.h.in  testhallelujah.cpp
test/addon/: CMakeLists.txt
test/inputmethod/: CMakeLists.txt
